--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
 
             - name: Building docker image 
               run: |
-                docker build -t farhintestacr.azurecr.io/farhintestacr:${{env.IMAGE_TAG}} .
+                docker build . -f ./frontend/Dockerfile 
 
             - name: Container Build & Push to ACR
               run: |
