--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
 
             - name: Building docker image 
               run: |
-                docker build . -f ./backend/Dockerfile 
+                docker build -t backend . 
 
             - name: Container Build & Push to ACR
               run: |
